[tool.poetry]
name = "compressive-sensing-project"
version = "0.1.0"
description = ""
authors = ["Charles-Meldhine Madi Mnemoi <icdk5b4zf@relay.firefox.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.1"
plotly = "^5.19.0"
seaborn = "^0.13.2"
openpyxl = "^3.1.2"
notebook = "^7.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
